crates/biome_cli/tests/snapshots/main_commands_lint/fs_handle_relative_path_in_cli_parameter.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## `biome.json`

```json
{
  "files": { "includes": ["**"] },
  "linter": {
    "rules": { "recommended": true, "suspicious": { "noDebugger": "error" } }
  }
}
```

## `file.js`

```js
debugger;
```

# Termination Message

```block
internalError/io ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × No files were processed in the specified paths.
  


```

# Emitted Messages

```block
Checked 0 files in <TIME>. No fixes applied.
```
