crates/biome_cli/tests/snapshots/main_commands_lint/ignore_configured_globals.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome lint fix.js
```

## `biome.json`

```json
{
  "javascript": {
    "globals": ["foo", "bar"]
  },
  "linter": {
    "rules": {
      "correctness": {
        "noUndeclaredVariables": "error"
      }
    }
  }
}
```

## `fix.js`

```js
foo.call(); bar.call();
```

# Emitted Messages

```block
Checked 1 file in <TIME>. No fixes applied.
```
