crates/biome_cli/tests/snapshots/main_commands_lint/ignore_vcs_os_independent_parse.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: content
---
## `biome.json`

```json
{
  "vcs": {
    "enabled": true,
    "clientKind": "git",
    "useIgnoreFile": true
  }
}
```

## `.gitignore`

```gitignore
something.js
file2.js
file3.js
```

## `file1.js`

```js
blah.call();
```

## `file2.js`

```js
foo.call(); bar.call();
```

## `file3.js`

```js
console.log('biome is cool');
```

# Emitted Messages

```block
Checked 1 file in <TIME>. No fixes were applied.
```
