crates/biome_cli/tests/snapshots/main_commands_lint/ignores_unknown_file.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome lint test.txt test.js --files-ignore-unknown=true
```

## `test.js`

```js
console.log('bar');

```

## `test.txt`

```txt
content
```

# Emitted Messages

```block
Checked 1 file in <TIME>. No fixes applied.
```
